syntax = "proto3";

package bookservermicro;
option go_package = "github.com/githubVladimirT/bookserver-micro;pb";

import "api/annotations.proto";
//import "codec/frame.proto";
//import "tag/tag.proto";
import "openapiv3/annotations.proto";

service BookServer {
    rpc Home(Empty) returns (StatusRsp) {
        option (micro.openapiv3.openapiv3_operation) = {
            operation_id: "Home";
            request_body: {
                request_body: {
                    content: {
                        additional_properties: {
                            name: "application/json";
                            value: {
                                schema: {
                                    reference: {
                                        _ref: ".StatusRsp";
                                    };
                                };
                            };
                        };
                    };
                }
            }
        };
        option (micro.api.http) = { get: "/"; };
    };
    rpc Push(postBook) returns (statusUploadedBookRsp) {
        option (micro.api.http) = {
            post: "/push";
            body: "*";
        };
    };
    rpc Book(getBook) returns (getBookRsp) {
        option (micro.openapiv3.openapiv3_operation) = {
            operation_id: "Book";
            request_body: {
                request_body: {
                    content: {
                        additional_properties: {
                            name: "application/json";
                            value: {
                                schema: {
                                    reference: {
                                        _ref: ".getBookRsp";
                                    };
                                };
                            };
                        };
                    };
                }
            }
        };
        option (micro.api.http) = {
            get: "/book";
        };
    };
    rpc GetAllBooks(Empty) returns (getAllBooks) {
        option (micro.openapiv3.openapiv3_operation) = {
            operation_id: "GetAllBooks";
            request_body: {
                request_body: {
                    content: {
                        additional_properties: {
                            name: "application/json";
                            value: {
                                schema: {
                                    reference: {
                                        _ref: ".getAllBooks";
                                    };
                                };
                            };
                        };
                    };
                }
            }
        };
        option (micro.api.http) = {
            get: "/allbooks";
        };
    };
    rpc GetAllBooksAndSort(sortType) returns (getAllBooksAndSort) {
        option (micro.openapiv3.openapiv3_operation) = {
            operation_id: "GetAllBooksAndSort";
            request_body: {
                request_body: {
                    content: {
                        additional_properties: {
                            name: "application/json";
                            value: {
                                schema: {
                                    reference: {
                                        _ref: ".getAllBooksAndSort";
                                    };
                                };
                            };
                        };
                    };
                }
            }
        };
        option (micro.api.http) = {
            get: "/books";
        };
    };
};

message Empty {};

message getBook {
    string book_title = 1;
};

message sortType {
    string sort_type = 1;
};

message getAllBooks {
    repeated string books = 1;
};

message getAllBooksAndSort {
    repeated getBookRsp books = 1;
};

message postBook {
    string book_title = 1;
    string author = 2;
    string genre = 3;
    string year = 4;
    bytes book_bytes = 5;
}

message getBookRsp {
    string title = 1;
    string author = 2;
    string genre = 3;
    string year = 4;
};

message StatusRsp {
    string description = 1;
};

message statusUploadedBookRsp {
    string book_id = 1;
};

